--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 WGDGameJam/WGDGameJam/WGDGameJam_TemporaryKey.pfx
+WGDGameJam/WGDGameJam/WGDGameJam.csproj.Debug.cachefile
