Added some textures in better place

--- a/WGDGameJam/WGDGameJam/WGDGameJam.csproj
+++ b/WGDGameJam/WGDGameJam/WGDGameJam.csproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CowPiece.cs" />
+    <Compile Include="HeadPiece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
