--- a/WGDGameJam/WGDGameJam/WGDGameJam.csproj
+++ b/WGDGameJam/WGDGameJam/WGDGameJam.csproj
@@ -70,7 +70,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -120,6 +120,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapManager.cs" />
+    <Compile Include="Square.cs" />
     <Compile Include="CowPiece.cs" />
     <Compile Include="HeadPiece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
