Inital commit for game #2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Magic MooShrooms/WGDGameJam/WGDGameJam/bin/*
 Magic MooShrooms/WGDGameJam/WGDGameJam/obj/*
 Magic MooShrooms/WGDGameJam/WGDGameJam/WGDGameJam.csproj.user
 Magic MooShrooms/WGDGameJam/WGDGameJamContent/obj/*
+CowShooter/CowShooter/CowShooter/CowShooterContent/obj/*
+CowShooter/CowShooter/CowShooter/CowShooter/obj/*
+CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj.user
+CowShooter/CowShooter/CowShooter.suo
