Initial project properties

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ CowShooter/CowShooter/CowShooter/CowShooterContent/obj/*
 CowShooter/CowShooter/CowShooter/CowShooter/obj/*
 CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj.user
 CowShooter/CowShooter/CowShooter.suo
+CowShooter/CowShooter/CowShooter/CowShooter/bin/*
