--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
+    <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>28478bd1-dbef-43ef-99b9-7aacfa3ab8db</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
