Missed proj file

--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Catapult.cs" />
     <Compile Include="Cow.cs" />
+    <Compile Include="CowManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
