--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -110,7 +110,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ammunition.cs" />
     <Compile Include="Catapult.cs" />
+    <Compile Include="ICollisionObject.cs" />
     <Compile Include="WallManager.cs" />
     <Compile Include="Cow.cs" />
     <Compile Include="WallBlock.cs" />
