--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Ammunition.cs" />
     <Compile Include="Catapult.cs" />
+    <Compile Include="Meat.cs" />
     <Compile Include="CollisionManager.cs" />
     <Compile Include="ICollisionObject.cs" />
     <Compile Include="WallManager.cs" />
