Working on Villager (incomplete and untested)

--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -116,6 +116,7 @@
     <Compile Include="CollisionManager.cs" />
     <Compile Include="ICollisionObject.cs" />
     <Compile Include="Villager.cs" />
+    <Compile Include="VillagerManager.cs" />
     <Compile Include="WallManager.cs" />
     <Compile Include="Cow.cs" />
     <Compile Include="WallBlock.cs" />
