--- a/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
+++ b/CowShooter/CowShooter/CowShooter/CowShooter/CowShooter.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Ammunition.cs" />
     <Compile Include="Catapult.cs" />
     <Compile Include="Bull.cs" />
+    <Compile Include="HealthBar.cs" />
     <Compile Include="Meat.cs" />
     <Compile Include="CollisionManager.cs" />
     <Compile Include="ICollisionObject.cs" />
